# pygame-ce-web-starter

./: .gitignore  AGENTS.md  README.md  breakout.py  chrome_dino.py  demo.py  drawing.py  index.html  main.py  pyproject.toml  pyrightconfig.json  pyscript.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
typings/pyscript/: __init__.pyi  web.pyi
